# swizzle

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: rgb.rs  swizzle_down_demo.rs  vec2.rs  vectors.rs
src/: lib.rs  swizzle.rs
