[package]
name = "swizzle"
version = "0.2.0"
edition = "2024"
description = "A powerful Rust macro for generating swizzle functions on structs"
keywords = ["swizzle", "macro", "vector", "graphics", "math", "field-reordering"]
categories = ["development-tools", "graphics", "mathematics"]
license = "MIT"
repository = "https://github.com/hamishmorgan/swizzle"
readme = "README.md"

[dependencies]
paste = "1.0.15"
